# matreshkaslang

./: .gitignore  CMakeLists.txt  README.md
docker/: dockerfile
gui/: codeeditor.cpp  mainwindow.cpp  qt_editor.pro  replwidget.cpp
include/: ast.hpp  codegen.hpp  environment.hpp  error.hpp  token.hpp  value.hpp
src/: interpreter.cpp  jit_compiler.cpp  lexer.cpp  main.cpp  parser.cpp  repl.cpp
src/stdlib/: file.cpp  math.cpp  module_loader.cpp
vscode/: package.json
vscode/syntaxes/: matreshka.tmLanguage.json
